--- a/params.yaml
+++ b/params.yaml
@@ -9,8 +9,7 @@ env:
 prepare:
   window_size: 8
   load_count: -1
-  transformations: 
-    - type: standardize
+  transformations: []
   raw_data_path: data/raw/PickCube/
   prepared_data_path: data/prepared/PickCube/
   data_file: trajectory.state.pd_joint_delta_pos.h5
@@ -20,22 +19,22 @@ train:
   obs_mode: state
   control_mode: pd_joint_delta_pos
   render_mode: rgb_array
-  batch_size: 64
+  batch_size: 128
   num_workers: 4
   lr: 0.001
   log_dir: logs/output
   plot_dir: logs/output/plots
-  iterations: 30000
+  iterations: 100000
   eval: false
   model: MLP
   model_params:
     num_heads: 4
-    hidden_dim: 128
-    dropout: 0.1
-    num_layers: 10
+    hidden_dim: 512
+    dropout: 0.5
+    num_layers: 4
 
 
 evaluate:
-  render: True
+  render: False
   render_mode: human
   seeds: [25, 42,100]
